Terraform/addons/monitoring/k8s-dashboard/deploy-with-custom-certs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: kubernetes-dashboard
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  template:
    spec:
      containers:
        - name: kubernetes-dashboard
          args:
            - --tls-cert-file=/tls.crt
            - --tls-key-file=/tls.key
            - --namespace=kubernetes-dashboard
