Terraform/addons/monitoring/k8s-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"  
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dashboard.k8s.local
    secretName: kubernetes-dashboard-certs
  rules:
  - host: dashboard.k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix      
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
